Mon Apr 12 21:47:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* LEGAL: separated the section for parse.c.  contributed by Paul
	  Betteridge in [ruby-core:29472].

Mon Apr 12 09:19:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (fu_each_src_dest): ensure src is accessible.

	* lib/fileutils.rb (fu_same): use File.identical? to get rid of
	  exceptions.  [ruby-core:28141]

	* lib/fileutils.rb (fu_have_st_ino): no longer used.

	* lib/fileutils.rb (fu_have_st_ino): check if required method is
	  defined, instead of platform name.

Mon Apr 12 05:10:20 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: New method Matrix.build [ruby-core:28272]

Mon Apr 12 03:45:25 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Deprecate elements_to_{f/i/r}

Mon Apr 12 03:30:29 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Handle coercion errors by raising TypeErrors
	  [ruby-core:26736]

Mon Apr 12 00:51:21 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_io_getline_fast, rb_io_getline_1): fix ARGF.lineno
	  behavior. [ruby-core:25205]

	* test/ruby/test_argf.rb (TestArgf#test_lineno3): add a test for
	  above.

Sun Apr 11 23:25:17 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: can not load libraries if --with-opt-dir is used
	  on AIX. [Bug #3107]

Sun Apr 11 14:44:45 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/irb/ruby-lex.rb (RubyLex#getc): revert r10817, which caused
	  regression for handling case when there is no newline at the end of
	  file.  [ruby-core:28248]

Sun Apr 11 12:08:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_replicate): new encoding name must be valid
	  c-string.  [ruby-dev:40954]

Sun Apr 11 11:58:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (ftruncate): rename to get rid of conflict
	  with same name but non-LFS function on MinGW.  [ruby-core:24757]
